Small changes to odom_image/multiimage_processor.py files Started implementation of VPR Primer code into ROS for live-viewing (vpr_simple.py) Updated package.xml requirements appropriately.

--- a/src/aarapsi_intro_pack/package.xml
+++ b/src/aarapsi_intro_pack/package.xml
@@ -48,6 +48,7 @@
   <exec_depend>python3-pathlib</exec_depend> 
   <exec_depend>python3-time</exec_depend> 
   <exec_depend>python3-matplotlib</exec_depend> 
+  <exec_depend>python3-pyyaml</exec_depend>
   
   <export>
   </export>
