--- a/src/aarapsi_intro_pack/CMakeLists.txt
+++ b/src/aarapsi_intro_pack/CMakeLists.txt
@@ -17,6 +17,7 @@ find_package(catkin REQUIRED COMPONENTS
   sensor_msgs
   std_msgs
   tf2
+  message_generation
 )
 
 ## System dependencies are found with CMake's conventions
@@ -53,11 +54,14 @@ find_package(catkin REQUIRED COMPONENTS
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
-# add_message_files(
-#   FILES
-#   Message1.msg
-#   Message2.msg
-# )
+add_message_files(
+  FILES
+  ImageLabel.msg
+  CompressedImageLabel.msg
+  ImageLabelStamped.msg
+  CompressedImageLabelStamped.msg
+  Heartbeat.msg
+)
 
 ## Generate services in the 'srv' folder
 # add_service_files(
@@ -74,10 +78,11 @@ find_package(catkin REQUIRED COMPONENTS
 # )
 
 ## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   geometry_msgs#   nav_msgs#   sensor_msgs#   std_msgs
-# )
+generate_messages(
+ DEPENDENCIES   
+ sensor_msgs   
+ std_msgs
+)
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
@@ -111,8 +116,7 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES aarapsi_intro_pack
-#  CATKIN_DEPENDS geometry_msgs image_transport laser_geometry nav_msgs roscpp rospy sensor_msgs std_msgs tf2
-#  DEPENDS system_lib
+ CATKIN_DEPENDS message_runtime
 )
 
 ###########
