--- a/src/aarapsi_intro_pack/package.xml
+++ b/src/aarapsi_intro_pack/package.xml
@@ -20,6 +20,7 @@
   <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>tf2</build_depend>
+  <build_depend>message_generation</build_depend>
   <build_export_depend>geometry_msgs</build_export_depend>
   <build_export_depend>image_transport</build_export_depend>
   <build_export_depend>laser_geometry</build_export_depend>
@@ -40,6 +41,7 @@
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>tf2</exec_depend>
+  <exec_depend>message_runtime</exec_depend>
 
   <exec_depend>python3-cv_bridge</exec_depend>	
   <exec_depend>python3-cv2</exec_depend>
