Improving vpr_simple speed, update pre-Bokeh changes.

--- a/src/aarapsi_intro_pack/package.xml
+++ b/src/aarapsi_intro_pack/package.xml
@@ -51,6 +51,7 @@
   <exec_depend>python3-time</exec_depend> 
   <exec_depend>python3-matplotlib</exec_depend> 
   <exec_depend>python3-pyyaml</exec_depend>
+  <exec_depend>python3-sklearn</exec_depend>
   
   <export>
   </export>
