--- a/src/aarapsi_intro_pack/package.xml
+++ b/src/aarapsi_intro_pack/package.xml
@@ -16,33 +16,37 @@
   <build_depend>nav_msgs</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
-  <build_depend>rospkg</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>tf2</build_depend>
   <build_depend>message_generation</build_depend>
+
+  <build_depend>python3-rospkg</build_depend>
+
   <build_export_depend>geometry_msgs</build_export_depend>
   <build_export_depend>image_transport</build_export_depend>
   <build_export_depend>laser_geometry</build_export_depend>
   <build_export_depend>nav_msgs</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
-  <build_export_depend>rospkg</build_export_depend>
   <build_export_depend>sensor_msgs</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
   <build_export_depend>tf2</build_export_depend>
+
+  <build_export_depend>python3-rospkg</build_export_depend>
+
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>image_transport</exec_depend>
   <exec_depend>laser_geometry</exec_depend>
   <exec_depend>nav_msgs</exec_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
-  <exec_depend>rospkg</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>tf2</exec_depend>
   <exec_depend>message_runtime</exec_depend>
 
+  <exec_depend>python3-rospkg</exec_depend>
   <exec_depend>python3-cv_bridge</exec_depend>	
   <exec_depend>python3-cv2</exec_depend>
   <exec_depend>python3-numpy</exec_depend>
@@ -52,6 +56,7 @@
   <exec_depend>python3-matplotlib</exec_depend> 
   <exec_depend>python3-pyyaml</exec_depend>
   <exec_depend>python3-sklearn</exec_depend>
+  <exec_depend>python3-enum</exec_depend>
   
   <export>
   </export>
