Real-Time Integrity Monitor vpr_monitor now working in prototype status (CL output) Revised package message structures to remove redundancy Updated vpr_all_in_one according to these changes

--- a/src/aarapsi_intro_pack/CMakeLists.txt
+++ b/src/aarapsi_intro_pack/CMakeLists.txt
@@ -56,8 +56,7 @@ catkin_python_setup()
 ## Generate messages in the 'msg' folder
 add_message_files(
   FILES
-  ImageLabel.msg
-  CompressedImageLabel.msg
+  LabelDetails.msg
   ImageLabelStamped.msg
   CompressedImageLabelStamped.msg
   Heartbeat.msg
