Integrated full odometry .npz support to vpr_feature_tool - Adjusted and renamed the image processors to be more appropriate to roles - Updated package.xml to include tqdm, tf - Reworked vpr_feature_tool to handle 2D odometry (position and velocity) - vpr_feature_tool also now captures time information - Binned vpr_feature_tool's 'extended mode'

--- a/src/aarapsi_intro_pack/package.xml
+++ b/src/aarapsi_intro_pack/package.xml
@@ -44,6 +44,7 @@
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>tf2</exec_depend>
+  <exec_depend>tf</exec_depend>
   <exec_depend>message_runtime</exec_depend>
 
   <exec_depend>python3-rospkg</exec_depend>
@@ -57,6 +58,7 @@
   <exec_depend>python3-pyyaml</exec_depend>
   <exec_depend>python3-sklearn</exec_depend>
   <exec_depend>python3-enum</exec_depend>
+  <exec_depend>python3-tqdm</exec_depend>
   
   <export>
   </export>
