--- a/src/aarapsi_intro_pack/cfg/dual_robot_localization.yaml
+++ b/src/aarapsi_intro_pack/cfg/dual_robot_localization.yaml
@@ -1,35 +1,9 @@
 # For parameter descriptions, please refer to the template parameter files for each node.
 
-ekf_se_odom:
-  frequency: 50
-  publish_acceleration: true
-  two_d_mode: true
-
-  map_frame: map
-  odom_frame: odom
-  base_link_frame: base_link
-  world_frame: odom
-
-  odom0: /jackal_velocity_controller/odom
-  odom0_config: [false, false, false,
-                false, false, false,
-                true, true, false,
-                false, false, true,
-                false, false, false]
-  odom0_differential: false
-
-  imu0: /imu/bias_removed
-  imu0_config: [false, false, false,
-                false, false, false,
-                false, false, false,
-                false, false, false,
-                false, false, false]
-  imu0_differential: false
-  # imu0_relative: true
-
 ekf_se_map:
-  frequency: 10
-  publish_acceleration: true
+  frequency: 50
+  publish_tf: false
+  publish_acceleration: false
   two_d_mode: true
 
   map_frame: map
@@ -58,7 +32,7 @@ ekf_se_map:
   imu0_config: [false, false, false,
                 false, false, false,
                 false, false, false,
-                false, false, false,
-                false, false, false]
+                false, false, true,
+                true, true, false]
   imu0_differential: false
   # imu0_relative: true
