--- a/src/aarapsi_intro_pack/package.xml
+++ b/src/aarapsi_intro_pack/package.xml
@@ -56,7 +56,8 @@
   <exec_depend>python3-time</exec_depend> 
   <exec_depend>python3-matplotlib</exec_depend> 
   <exec_depend>python3-pyyaml</exec_depend>
-  <exec_depend>python3-sklearn</exec_depend>
+  <exec_depend>python3-sklearn</exec_depend> <!-- pip install scikit-learn -->
+  <exec_depend>python3-sklearnex</exec_depend> <!-- pip install scikit-learn-intelex -->
   <exec_depend>python3-enum</exec_depend>
   <exec_depend>python3-tqdm</exec_depend>
   
