added new repo/submodule to package.xml

--- a/src/aarapsi_intro_pack/package.xml
+++ b/src/aarapsi_intro_pack/package.xml
@@ -8,6 +8,8 @@
   <license>MIT</license>
   <url type="website">https://github.com/QVPR/aarapsiproject</url>
   <url type="website">https://github.com/owenclaxton-QUT/aarapsi_offrobot_ws</url>
+  <url type="website">https://github.com/owenclaxton-QUT/aarapsi_robot_ws</url>
+
 
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>geometry_msgs</build_depend>
